@@ -1,7 +1,7 @@
 package com.comet.opik.api.resources.v1.priv;
 
 import com.comet.opik.api.DataPoint;
-import com.comet.opik.api.FeedbackScoreBatchItem;
+import com.comet.opik.api.FeedbackScoreItem;
 import com.comet.opik.api.Span;
 import com.comet.opik.api.Trace;
 import com.comet.opik.api.metrics.WorkspaceMetricRequest;
@@ -62,6 +62,7 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
+import static com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem;
 import static com.comet.opik.api.resources.utils.ClickHouseContainerUtils.DATABASE_NAME;
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -424,6 +425,7 @@ class WorkspacesResourceTest {
         var spans = PodamFactoryUtils.manufacturePojoList(factory, Span.class)
                 .stream()
                 .map(span -> span.toBuilder()
+                        .startTime(time)
                         .id(idGenerator.getTimeOrderedEpoch(time.toEpochMilli()))
                         .projectId(null)
                         .projectName(projectName)
@@ -451,6 +453,9 @@ class WorkspacesResourceTest {
                                     ? idGenerator.generateId()
                                     : idGenerator.getTimeOrderedEpoch(time.toEpochMilli()))
                             .projectName(projectName)
+                            .startTime(time == null
+                                    ? Instant.now()
+                                    : time)
                             .build();
 
                     traceResourceClient.createTrace(trace, apiKey, workspaceName);
@@ -462,18 +467,18 @@ class WorkspacesResourceTest {
                                     .projectName(projectName)
                                     .id(trace.id())
                                     .build())
-                            .toList();
+                            .collect(Collectors.toList());
 
                     traceResourceClient.feedbackScores(scores, apiKey, workspaceName);
 
                     return scores;
                 })
                 .flatMap(List::stream)
-                .collect(Collectors.groupingBy(FeedbackScoreBatchItem::name))
+                .collect(Collectors.groupingBy(FeedbackScoreItem::name))
                 .entrySet().stream()
                 .collect(Collectors.toMap(
                         Map.Entry::getKey,
-                        e -> calcAverage(e.getValue().stream().map(FeedbackScoreBatchItem::value)
+                        e -> calcAverage(e.getValue().stream().map(FeedbackScoreItem::value)
                                 .toList())));
     }
 
